[package]
name = "rawsoku"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio-tungstenite]
version = "0.13.0"
features = ["tls"]

[dependencies.tokio-native-tls]
version = "0.3.0"

[dependencies]
serde_json = "1.0.64"
url = "2.2.2"
futures-util = "0.3.15"
reqwest = {version = "0.11.4", features = ["blocking"]}

[dependencies.tokio]
version = "1.7.1"
features = ["rt", "time", "macros"]